<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/crime_action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/crime_action_reload_label"/>
    <item
        android:id="@+id/crime_action_select_interval"
        android:showAsAction="never"
        android:title="@string/crime_action_select_interval_label"/>
    <item
        android:id="@+id/crime_action_utvar_detail"
        android:showAsAction="never"
        android:title="@string/crime_action_utvar_detail_label"/>
    <item
        android:id="@+id/crime_action_summary"
        android:showAsAction="never"
        android:title="@string/crime_action_summary_label"/>
    <item
        android:id="@+id/crime_action_list"
        android:showAsAction="never"
        android:title="@string/crime_action_list_label"/>

</menu>